# ai-voice-talk-generation

./: .env.example  .env.prod.sample  .gitignore  .prettierrc.json  CLAUDE.md  README.md  docker-compose.gpu.yml  docker-compose.prod.yml.sample  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/openapi/: openapi.yaml
apps/web/playwright-report/: index.html
apps/web/prisma/: schema.prisma  seed.ts
apps/web/prisma/migrations/20260419102630_init_schema/: migration.sql
apps/web/prisma/migrations/20260419200000_phase4_schema/: migration.sql
apps/web/prisma/migrations/20260419212403_add_password_reset_token/: migration.sql
apps/web/prisma/migrations/20260420113000_add_vieneu_voxcpm2_providers/: migration.sql
apps/web/prisma/migrations/20260420113100_seed_vieneu_voxcpm2_providers/: migration.sql
apps/web/prisma/migrations/20260503000000_add_xiaomi_xai_providers/: migration.sql
apps/web/prisma/migrations/20260526000000_video_revoice_audiogram_models/: migration.sql
apps/web/public/: site.webmanifest
apps/web/scripts/: check-openapi.mjs
apps/web/src/: env.ts  middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(app)/: error.tsx  layout.tsx
apps/web/src/i18n/: request.ts
apps/web/src/lib/: logger.ts  provider-pricing.ts  providers-meta.ts  timed-script.test.ts  timed-script.ts  utils.test.ts  utils.ts
apps/web/src/server/: trpc.ts
apps/web/src/styles/: globals.css  tokens.css
apps/web/src/types/: libsodium-wrappers-sumo.d.ts  next-auth.d.ts
apps/web/tests/: setup.ts
apps/web/tests/e2e/: accessibility.spec.ts  auth.spec.ts  global-setup.ts  happy-path.spec.ts  phase3-regression.spec.ts  podcast-flow.spec.ts
apps/web/tests/unit/: timed-script.test.ts
apps/worker/: coverage.xml  pyproject.toml
apps/worker/src/worker/: __init__.py  config.py  job_payloads.py  logging.py  main.py  queue.py  tracing.py
apps/worker/src/worker/audio/: align.py  audiogram.py  captions.py  denoise.py  io.py  quality.py  separate.py  stitch.py  subtitles.py
apps/worker/src/worker/pipelines/: asr.py  ingest.py  render.py  url_ingest.py  video_revoice.py
apps/worker/src/worker/providers/: __init__.py  base.py  elevenlabs.py  f5.py  gemini_tts.py  indextts.py  kokoro.py  minimax.py  registry.py  vibevoice.py  vieneu.py  voxcpm2.py  xai.py  xiaomi.py  xtts.py
apps/worker/src/worker/services/: crypto.py  storage.py
apps/worker/src/worker/text/: __init__.py  vietnamese.py
apps/worker/tests/: test_queue.py
apps/worker/tests/unit/: test_asr_diarization.py  test_audio_io.py  test_audio_quality.py  test_audiogram.py  test_captions.py  test_contracts_roundtrip.py  test_ingest_pipeline.py  test_minimax_provider.py  test_pacing_rephrase.py  test_provider_voice_resolution.py  test_revoice_selective.py  test_stitch_timeline.py  test_subtitles.py  test_vietnamese_normalize.py  test_xai_provider.py
docs/: ADMIN_MANUAL.md  ANTI_PATTERNS.md  ARCHITECTURE.md  CODING_GUIDELINES.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DESIGN_TOKENS.md  PRD.md  README.md  RELEASES.md  RETROS.md  TASKS.md  TECH_STACK.md  TESTING_STRATEGY.md  VOICE_PROVIDER_EVALUATION.md  VOICE_PRO_STUDY.md  WORKFLOW.md  XAI_VOICE_RECORDING_GUIDE.html
docs/ios/: 00-OVERVIEW.md  01-ACCOUNT-AND-AUTH.md  02-API-CONTRACT.md  03-VOICE-PROFILE-AND-CLONING.md  04-TECHNICAL-ARCHITECTURE.md  05-WEB-SIDE-GAPS-AND-TOP-INDUSTRY-REVIEW.md  06-TASK-BREAKDOWN.md  README.md
infra/caddy/: Caddyfile
infra/docker/: web.Dockerfile  worker.Dockerfile
infra/grafana/provisioning/dashboards/: dashboard.yml  voice_studio.json
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
infra/scripts/: backup.sh  check-i18n-parity.ts  gen-secrets.sh  quota-reset.ts  retention-purge.ts
messages/: en.json  vi.json
scripts/: install-services.sh  start-dev.sh  stop-dev.sh  uninstall-services.sh
scripts/audit/: prod-web-lint.sh
(+152 files in other folders)
